--- a/about.html
+++ b/about.html
@@ -8,11 +8,13 @@
 </head>
 <body>
 <div id="siteContainer">
+	<h1 class="hidden">Thames River Anglers Association</h1>
 		<div id="mainNav">
 		<div id="logoContainer">
 		<img src="images/traa_logo.svg" alt=" traa logo">
 		</div>
 		<nav>
+			<h2 class="hidden">Main Navigation</h2>
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li>•</li>
@@ -38,7 +40,7 @@
 			<div class="title">
 				<h2>About The Thames River Anglers Association</h2>
 			</div>
-			<section id="about1">
+			<div id="about1">
 				<div id="aboutImageCon">
 					<img src="images/about1.png" alt="river clean-up">
 					<img src="images/about2.png" alt="scenic river release">
@@ -52,7 +54,7 @@
 						<p>• Form partnerships with community businesses, government agencies, special interest groups, landowners, and other stakeholders in the Thames River watershed.</p>
 						<p>• Increase public awareness of the unique diversity of the Thames River Watershed, its challenges, its recreational opportunities and its vital importance to our community.</p>
 				</div>
-			</section>
+			</div>
 		</div>
 	</div>
 
@@ -93,8 +95,7 @@
 		<div id="fundraiserBlurb">
 			<div class="title">
 				<h2>FUNDRAISING</h2>
-			</div>
-		<h2>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h2>
+		<h3>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h3></div>
 			<div id="fundraiserImgs">
 				<div class="fundraiserImg"><img src="images/fund1.png" alt="Trout Hatchery"></div>
 				<div class="fundraiserImg"><img src="images/fund2.png" alt="Salmonid Monitoring"></div>
@@ -128,12 +129,11 @@
 				<li>•</li>
 				<li class="FButton"><a href="#">Return To Top</a></li>
 				<li><form><input type="search" placeholder="Search..."></form></li>
-				<li><button class="sbutton"><a href="#">Search</a></button></li>
+				<li><button class="sbutton">Search</button></li>
 				</ul>
 		</div>
 	</div>
 
-</div>
 
 	<!-- Content goes here -->
 		<script src="js/main.js"></script>
