--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<img src="images/traa_logo.svg" alt=" traa logo">
 		</div>
 		<nav>
+			<h2 class="hidden">Main Navigation</h2>
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li>•</li>
@@ -40,10 +41,10 @@
 			<div id="heroSlogan2"><p>Dedication Today for Tomorrow</p></div>
 			</div>
 
-			<div id="heroArrows">
+			<div class="heroArrows">
 				<div id="leftArrow"><a href="#"><</a></div>
 			</div>
-			<div id="heroArrows">
+			<div class="heroArrows">
 				<div id="rightArrow"><a href="#">></a></div>
 			</div>
 		</div>
@@ -74,8 +75,7 @@
 		<div id="fundraiserBlurb">
 			<div class="title">
 				<h2>FUNDRAISING</h2>
-			</div>
-		<h2>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h2>
+		<h3>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h3></div>
 			<div id="fundraiserImgs">
 				<div class="fundraiserImg"><img src="images/fund1.png" alt="Trout Hatchery"></div>
 				<div class="fundraiserImg"><img src="images/fund2.png" alt="Salmonid Monitoring"></div>
@@ -174,35 +174,35 @@
 			<div class="subtitle"><h3>The support of the following area business people is much appreciated</h3></div>
 
 			<div class="businesses">
-				<div class="businessesImg"><img src="images/bus1.png"></div>
+				<div class="businessesImg"><img src="images/bus1.png" alt="Melchers logo"></div>
 				<div class="businessText">
 					<p>Over the past couple of years the folks at Melchers Construction Ltd have offered up their beautiful boardroom for TRAA executive meetings. It's an ideal space with all the amenities required for us to accomplish all the "behind the scenes" work of the TRAA. Many thanks go out to the continued support of Melchers Construction Ltd.</p>
 				</div>
 			</div>
 
 				<div class="businesses">
-				<div class="businessesImg"><img src="images/bus2.png"></div>
+				<div class="businessesImg"><img src="images/bus2.png" alt="Guillevin Greentech logo"></div>
 				<div class="businessText">
 					<p>Members of the trout hatchery rotation know the woes we've had with lighting in the hatchery. Even with larger fixtures installed a few years ago, it was still frustrating on days when the mercury dipped below -15C and the fluorescent technology just teased us with its dull flicker. Enter Mike Jeffries of Guillevin Greentech in London with nice set of bright and dependable (and new!) LED fixtures. Once they were installed it was like working in well-appointed laboratory.</p>
 				</div>
 			</div>
 
 			<div class="businesses">
-				<div class="businessesImg"><img src="images/bus3.png"></div>
+				<div class="businessesImg"><img src="images/bus3.png" alt="Muma Manufacturing logo"></div>
 				<div class="businessText">
 					<p>The TRAA voted unanimously to re-name the TRAA trout hatchery honouring Keith Wales' memory and his unselfish support of the TRAA's work in the London area, in particular Komoka Creek. Special thanks go out to Muma Manufacturing in St. Thomas for donating the beautiful laser-cut aluminum sign.</p>
 				</div>
 			</div>
 
 			<div class="businesses">
-				<div class="businessesImg"><img src="images/bus4.png"></div>
+				<div class="businessesImg"><img src="images/bus4.png" alt="Try Recycling Logo"></div>
 				<div class="businessText">
 					<p>After cleaning up the area around the TRAA shed and trout hatchery, our trailer was quite full and needed to be emptied. A big 'thank you' goes out to Rick Vandersluis and Mike Seabrook of Try Recycling who allowed the TRAA to empty the trailer at their facility free of charge.</p>
 				</div>
 			</div>
 
 			<div class="businesses">
-				<div class="businessesImg"><img src="images/bus5.png"></div>
+				<div class="businessesImg"><img src="images/bus5.png" alt="Angling Sports Logo"></div>
 				<div class="businessText">
 					<p>Before we could take the trailer to Try Recycling, we needed to get the spare tire for the trailer fixed. Pat Devincenzo, proprietor of Angling Sports, offered to get it repaired. Turns out the tire needed replacing and Pat took care of it.
 					Angling Sports also supplied cards for all TRAA members that entitle them to a discount equal to the tax on anything in the store.
@@ -267,7 +267,7 @@
 				<li>•</li>
 				<li class="FButton"><a href="#">Return To Top</a></li>
 				<li><form><input type="search" placeholder="Search..."></form></li>
-				<li><button class="sbutton"><a href="#">Search</a></button></li>
+				<li><button class="sbutton">Search</button></li>
 				</ul>
 		</div>
 	</div>
