--- a/projTem.html
+++ b/projTem.html
@@ -8,11 +8,13 @@
 </head>
 <body>
 <div id="siteContainer">
+	<h1 class="hidden">Thames River Anglers Association</h1>
 		<div id="mainNav">
 		<div id="logoContainer">
 		<img src="images/traa_logo.svg" alt=" traa logo">
 		</div>
 		<nav>
+			<h2 class="hidden">Main Navigation</h2>
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li>•</li>
@@ -40,9 +42,9 @@
 			</div>
 			<section class="project1">
 				<div class="projectImageCon">
-					<div class="projimage"><img src=""></div>
-					<div class="projimage"><img src=""></div>
-					<div class="projimage"><img src=""></div>
+					<div class="projimage"><img src="" alt="image"></div>
+					<div class="projimage"><img src="" alt="image"></div>
+					<div class="projimage"><img src="" alt="image"></div>
 				</div>
 				<div class="project1TextCon">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste reprehenderit unde eius laborum exercitationem. Beatae rem officia repellendus doloribus voluptate at veniam explicabo, a numquam ducimus quis distinctio nesciunt harum?</p>
@@ -64,9 +66,9 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis impedit rem, ullam molestiae rerum illo distinctio laborum deserunt, in voluptates, ratione unde iusto qui esse, sit cum error voluptatem doloremque..</p>
 		</div>	
 		<div class="project2ImageCon">
-			<div class="projimage"><img src=""></div>
-			<div class="projimage"><img src=""></div>
-			<div class="projimage"><img src=""></div>
+			<div class="projimage"><img src="" alt="image"></div>
+			<div class="projimage"><img src="" alt="image"></div>
+			<div class="projimage"><img src="" alt="image"></div>
 		</div>
 	</div>
 </div>
@@ -90,9 +92,8 @@
 	<div id="fundraiser">
 		<div id="fundraiserBlurb">
 			<div class="title">
-				<h2>FUNDRAISING</h2>
-			</div>
-		<h2>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h2>
+		<h2>FUNDRAISING</h2>
+		<h3>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h3></div>
 			<div id="fundraiserImgs">
 				<div class="fundraiserImg"><img src="images/fund1.png" alt="Trout Hatchery"></div>
 				<div class="fundraiserImg"><img src="images/fund2.png" alt="Salmonid Monitoring"></div>
@@ -126,12 +127,10 @@
 				<li>•</li>
 				<li class="FButton"><a href="#">Return To Top</a></li>
 				<li><form><input type="search" placeholder="Search..."></form></li>
-				<li><button class="sbutton"><a href="#">Search</a></button></li>
+				<li><button class="sbutton">Search</button></li>
 				</ul>
 		</div>
 	</div>
-
-</div>
 
 	<!-- Content goes here -->
 		<script src="js/main.js"></script>
