--- a/projects.html
+++ b/projects.html
@@ -8,11 +8,13 @@
 </head>
 <body>
 <div id="siteContainer">
+	<h1 class="hidden">Thames River Anglers Association</h1>
 	<div id="mainNav">
 		<div id="logoContainer">
 		<img src="images/traa_logo.svg" alt=" traa logo">
 		</div>
 		<nav>
+			<h2 class="hidden">Main Navigation</h2>
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li>•</li>
@@ -121,8 +123,7 @@
 		<div id="fundraiserBlurb">
 			<div class="title">
 				<h2>FUNDRAISING</h2>
-			</div>
-		<h2>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h2>
+		<h3>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h3></div>
 			<div id="fundraiserImgs">
 				<div class="fundraiserImg"><img src="images/fund1.png" alt="Trout Hatchery"></div>
 				<div class="fundraiserImg"><img src="images/fund2.png" alt="Salmonid Monitoring"></div>
@@ -156,11 +157,11 @@
 				<li>•</li>
 				<li class="FButton"><a href="#">Return To Top</a></li>
 				<li><form><input type="search" placeholder="Search..."></form></li>
-				<li><button class="sbutton"><a href="#">Search</a></button></li>
+				<li><button class="sbutton">Search</button></li>
 				</ul>
 		</div>
 	</div>
-</div>
+
 
 	<!-- Content goes here -->
 		<script src="js/main.js"></script>
