--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,13 @@
 </head>
 <body>
 <div id="siteContainer">
+	<h1 class="hidden">Thames River Anglers Association</h1>
 	<div id="mainNav">
 		<div id="logoContainer">
 		<img src="images/traa_logo.svg" alt=" traa logo">
 		</div>
 		<nav>
+			<h2 class="hidden">Main Navigation</h2>
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li>•</li>
@@ -43,9 +45,9 @@
 					<img src="images/cont2.png" alt="foggy lake">
 				</div>
 				<div id="cont1TextCon">
-						<div id="subtitle"><p>There are a bunch of ways to get in touch with the TRAA</p></div>
+						<div class="subtitle1"><p>There are a bunch of ways to get in touch with the TRAA</p></div>
 						<p>If you're with a like-minded organization or group looking for more information on the Thames River Anglers Association and its activities</p>
-						<div id="subtitle"><p>OR</p></div>
+						<div class="subtitle1"><p>OR</p></div>
 						<p>If you're an individual who would like to become involved with the activities undertaken by the Thames River Anglers Association...</p>
 						<p>the Thames River Anglers Association would like to hear from you.</p>
 			</div>
@@ -108,9 +110,9 @@
 					<img src="images/cont2.png" alt="foggy lake">
 				</div>
 				<div id="memTextCon">
-						<div id="deal"><h3>This is the BEST membership deal you can buy!</h3></div>
+						<div class="deal"><h3>This is the BEST membership deal you can buy!</h3></div>
 						<p>Some people have a hard time paying to volunteer. Well if that's you, just give us $25.00 every year and we won't bug you - much. You'll get a card that says your a TRAA member and you'll get periodic updates on what you're missing out on.</p>
-						<div id="deal">Participate, Help Out, Have Fun and give a little bit back to the Thames River watershed!</div>
+						<div class="deal">Participate, Help Out, Have Fun and give a little bit back to the Thames River watershed!</div>
 						<p>Not only does $25.00 get you in good standing as a TRAA member, it also includes everyone in your immediate family!</p>
 						<p>The best way to join up is to attend a TRAA event or email us for other options.</p>
 			</div>
@@ -123,9 +125,8 @@
 	<div id="fundraiser">
 		<div id="fundraiserBlurb">
 			<div class="title">
-				<h2>FUNDRAISING</h2>
-			</div>
-		<h2>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h2>
+					<h2>FUNDRAISING</h2>
+		<h3>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h3></div>
 			<div id="fundraiserImgs">
 				<div class="fundraiserImg"><img src="images/fund1.png" alt="Trout Hatchery"></div>
 				<div class="fundraiserImg"><img src="images/fund2.png" alt="Salmonid Monitoring"></div>
@@ -159,7 +160,7 @@
 				<li>•</li>
 				<li class="FButton"><a href="#">Return To Top</a></li>
 				<li><form><input type="search" placeholder="Search..."></form></li>
-				<li><button class="sbutton"><a href="#">Search</a></button></li>
+				<li><button class="sbutton">Search</button></li>
 				</ul>
 		</div>
 	</div>
