working on responsiveness

--- a/index.html
+++ b/index.html
@@ -36,17 +36,10 @@
 
 		<div class="hero">
 
-			<div id="heroSlogans">
-			<div id="heroSlogan1"><p>Welcome to the Thames River Anglers Association</p></div>
-			<div id="heroSlogan2"><p>Dedication Today for Tomorrow</p></div>
+			<div id="heroSlogan"><p>Welcome to the Thames River Anglers Association</p>
+			<p>Dedication Today for Tomorrow</p></div>
 			</div>
 
-			<div class="heroArrows">
-				<div id="leftArrow"><a href="#"><</a></div>
-			</div>
-			<div class="heroArrows">
-				<div id="rightArrow"><a href="#">></a></div>
-			</div>
 		</div>
 
 			<div id="missionBG">
@@ -58,7 +51,6 @@
 		<div class="divider"></div>
 
 		<div class="extraSpace">
-		<div id="memberships">
 			<div id="membershipText"><h2>MEMBERSHIPS
 			ARE DUE! </h2>
 			<p>You get to be a TRAA member for a whole year for only $25! Your membership also adds another voice to our efforts in protecting and enhancing aquatic habitats in the London & area community.
@@ -67,12 +59,10 @@
 				<div class="linkB button"><a href="contact.html">Become a Member!</a></div>
 			</div>
 		</div>
-	</div>
 
 	<div class="divider"></div>
 
 	<div id="fundraiser">
-		<div id="fundraiserBlurb">
 			<div class="title">
 				<h2>FUNDRAISING</h2>
 		<h3>Efforts are underway to get the funding we need to continue many of the TRAA's most vital projects:</h3></div>
@@ -88,7 +78,6 @@
 			</div>
 			<div id="fundraiserText">
 			<p>Please email us if you'd like to take an active role in raising the funds needed for these and other important TRAA activities</p></div>
-		</div>
 		</div>
 
 	<div class="divider"></div>
@@ -215,12 +204,12 @@
 	<div class="divider"></div>
 
 <div class="extraSpace">
-	<div id="executives">
+	<div class="comittee">
 		<div class="title">
 			<h2>TRAA EXECUTIVES</h2>
 		</div>
 		
-		<div class="executives">
+		<div class="comittees">
 			<div class="members">
 			<div class="member"><H2>President</H2><p>Rob Huber</p></div>
 			<div class="member"><H2>Vice President</H2><p>Paul Holmes</p></div>
@@ -234,21 +223,43 @@
 	<div class="divider"></div>
 
 <div class="extraSpace">
-	<div id="chairs">
+	<div class="comittee">
 		<div class="title">
 			<h2>TRAA VOLUNTEER COMMITTEE CHAIRS</h2>
 		</div>
 
-		<div class="chairs">
+		<div class="comittees">
 			<div class="members">
-			<div class="member"><H2>Trout</H2><p>Dan Schinkelshoek</p></div>
-			<div class="member"><H2>Warmwater</H2><p>Pud Hunter</p></div>
-			<div class="member"><H2>Habitat</H2><p>Jeremy Beaton</p><p>Paul Holmes</p><p>Randy Bailey</p></div>
-			<div class="member"><H2>Public Relations</H2><p>Rob Huber</p><p>Randy Bailey</p><p>Paul Noble</p></div>
-			<div class="member"><H2>Hatchery Management</H2><p>Adam Bengen</p><p>Randy Bailey</p></div></div>		
+			<div class="member">
+				<H2>Trout</H2>
+				<p>Dan Schinkelshoek</p>
+			</div>
+			<div class="member">
+				<H2>Warmwater</H2>
+				<p>Pud Hunter</p>
+			</div>
+			<div class="member">
+				<H2>Habitat</H2>
+				<p>Jeremy Beaton</p>
+				<p>Paul Holmes</p>
+				<p>Randy Bailey</p>
+			</div>
+			<div class="member">
+				<H2>Public Relations</H2>
+				<p>Rob Huber</p>
+				<p>Randy Bailey</p>
+				<p>Paul Noble</p>
+			</div>
+			<div class="member">
+				<H2>Hatchery Management</H2>
+				<p>Adam Bengen</p>
+				<p>Randy Bailey</p>
+			</div>
+			</div>		
 		</div>
 	</div>
 </div>
+
 
 	<div id="footer">
 		<div id="footerNav">
