more responsive design implemented

--- a/Events.html
+++ b/Events.html
@@ -47,237 +47,77 @@
 		</div>
 	</section>
 		<div class="eventBox"> 
-			<div class="eventImages">
 				<img src="images/event1.png" alt="trees" class="eventImg">
 				<img src="images/event2.png" alt="canoe under bridge" class="eventImg">
-				<img src="images/event3.png" alt="bridge and river" class="eventImg">	
-			</div>
-			<div class="eventText">
-				<div class="boxText">
-					<p>Stream Habitat Work Party, October 13, 2018</p></div>
-				<div class="boxText">
-					<p>Annual TRAA Paddle & Fish, July 14, 2018</p></div>
-				<div class="boxText">
-					<p>Stream Habitat Work Party, July 12, 2018</p></div>
-			</div>
-			<div class="eventButtons">
-				<div class="buttonCon">
-				<div class="linkB button">
-					<a href="#">See More</a>
-				</div>
-				</div>
-				<div class="buttonCon">
-				<div class="linkB button">
-					<a href="#">See More</a>
-				</div>
-				</div>
-				<div class="buttonCon">
-				<div class="linkB button">
-					<a href="#">See More</a>
-				</div>
-				</div>
-			</div>
-		</div>
-	
-		<div class="eventBox"> 
-			<div class="eventImages">
+				<img src="images/event3.png" alt="bridge and river" class="eventImg">
+					<p>Stream Habitat Work Party, October 13, 2018</p>
+					<p>Annual TRAA Paddle & Fish, July 14, 2018</p>
+					<p>Stream Habitat Work Party, July 12, 2018</p>
+					<a href="#" class="eventButtons">See More</a>
+					<a href="#" class="eventButtons">See More</a>
+					<a href="#" class="eventButtons">See More</a>
 				<img src="images/event4.png" alt="broken roof" class="eventImg">
 				<img src="images/event5.png" alt="kids in river" class="eventImg">
 				<img src="images/event6.png" alt="London Show" class="eventImg">	
-			</div>
-			<div class="eventText">
-				<div class="boxText">
-					<p>Work Party Hatchery Roof Repair, June 30, 2018</p></div>
-				<div class="boxText">
-					<p>Rainbow Trout Release June 23 2018</p></div>
-				<div class="boxText">
-					<p>TRAA Showtime, Feb 23-25 2017</p></div>
-			</div>
-			<div class="eventButtons">
-				<div class="buttonCon">
-				<div class="linkB button">
-					<a href="#">See More</a>
-				</div>
-				</div>
-				<div class="buttonCon">
-				<div class="linkB button">
-					<a href="#">See More</a>
-				</div>
-				</div>
-				<div class="buttonCon">
-				<div class="linkB button">
-					<a href="#">See More</a>
-				</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="eventBox"> 
-			<div class="eventImages">
+					<p>Work Party Hatchery Roof Repair, June 30, 2018</p>
+					<p>Rainbow Trout Release June 23 2018</p>
+					<p>TRAA Showtime, Feb 23-25 2017</p>
+					<a href="#" class="eventButtons">See More</a>
+					<a href="#" class="eventButtons">See More</a>
+					<a href="#" class="eventButtons">See More</a>
 				<img src="images/event7.png" alt="guys release fish" class="eventImg">
 				<img src="images/event8.png" alt="family in river" class="eventImg">
 				<img src="images/event9.png" alt="family on dock" class="eventImg">	
-			</div>
-			<div class="eventText">
-				<div class="boxText">
-					<p>Rainbow Trout Release June 16 2017</p></div>
-				<div class="boxText">
-					<p>Brook Trout Release May 17 2017</p></div>
-				<div class="boxText">
-					<p>Family Fishing Day Fanshawe C.A July 9 2016</p></div>
-			</div>
-			<div class="eventButtons">
-				<div class="buttonCon">
-				<div class="linkB button">
-					<a href="#">See More</a>
-				</div>
-				</div>
-				<div class="buttonCon">
-				<div class="linkB button">
-					<a href="#">See More</a>
-				</div>
-				</div>
-				<div class="buttonCon">
-				<div class="linkB button">
-					<a href="#">See More</a>
-				</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="eventBox"> 
-			<div class="eventImages">
+					<p>Rainbow Trout Release June 16 2017</p>
+					<p>Brook Trout Release May 17 2017</p>
+					<p>Family Fishing Day Fanshawe C.A July 9 2016</p>
+					<a href="#" class="eventButtons">See More</a>
+					<a href="#" class="eventButtons">See More</a>
+					<a href="#" class="eventButtons">See More</a>
 				<img src="images/event10.png" alt="guys with bucket" class="eventImg">
 				<img src="images/event11.png" alt="river clean-up" class="eventImg">
 				<img src="images/event12.png" alt="angling sport logo" class="eventImg">	
-			</div>
-			<div class="eventText">
-				<div class="boxText">
-					<p>Brown Trout Release May 2 2016</p></div>
-				<div class="boxText">
-					<p>Thames River Clean-Up May 7 2016</p></div>
-				<div class="boxText">
-					<p>Angling Sports BBQ May 7 2016</p></div>
-			</div>
-			<div class="eventButtons">
-				<div class="buttonCon">
-				<div class="linkB button">
-					<a href="#">See More</a>
-				</div>
-				</div>
-				<div class="buttonCon">
-				<div class="linkB button">
-					<a href="#">See More</a>
-				</div>
-				</div>
-				<div class="buttonCon">
-				<div class="linkB button">
-					<a href="#">See More</a>
-				</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="eventBox"> 
-			<div class="eventImages">
+					<p>Brown Trout Release May 2 2016</p>
+					<p>Thames River Clean-Up May 7 2016</p>
+					<p>Angling Sports BBQ May 7 2016</p>
+					<a href="#" class="eventButtons">See More</a>
+					<a href="#" class="eventButtons">See More</a>
+					<a href="#" class="eventButtons">See More</a>
 				<img src="images/event13.png" alt="wooden stairs" class="eventImg">
 				<img src="images/event14.png" alt="family canoe" class="eventImg">
 				<img src="images/event15.png" alt="father daughter fishing" class="eventImg">	
-			</div>
-			<div class="eventText">
-				<div class="boxText">
-					<p>TRAA Projects Trout Hatchery Interior & Stairway Update</p></div>
-				<div class="boxText">
-					<p>3rd Annual TRAA Paddle & Fish July 18 2015</p></div>
-				<div class="boxText">
-					<p>Family Fishing Day Fanshawe C.A July 11 2015</p></div>
-			</div>
-			<div class="eventButtons">
-				<div class="buttonCon">
-				<div class="linkB button">
-					<a href="#">See More</a>
-				</div>
-				</div>
-				<div class="buttonCon">
-				<div class="linkB button">
-					<a href="#">See More</a>
-				</div>
-				</div>
-				<div class="buttonCon">
-				<div class="linkB button">
-					<a href="#">See More</a>
-				</div>
-				</div>
-			</div>
-		</div>
-
-
-		<div class="eventBox"> 
-			<div class="eventImages">
+					<p>TRAA Projects Trout Hatchery Interior & Stairway Update</p>
+					<p>3rd Annual TRAA Paddle & Fish July 18 2015</p>
+					<p>Family Fishing Day Fanshawe C.A July 11 2015</p>
+					<a href="#" class="eventButtons">See More</a>
+					<a href="#" class="eventButtons">See More</a>
+					<a href="#" class="eventButtons">See More</a>
 				<img src="images/event16.png" alt="movie cover" class="eventImg">
 				<img src="images/event17.png" alt="children with bucket" class="eventImg">
 				<img src="images/event18.png" alt="steelhead fish" class="eventImg">	
-			</div>
-			<div class="eventText">
-				<div class="boxText">
-					<p>TRAA Presents Film DamNation @ Wolfe Performance Hall June 18 2015</p></div>
-				<div class="boxText">
-					<p>Rainbox Trout Release June 22 2015</p></div>
-				<div class="boxText">
-					<p>Steelhead Tagging and Monitoring Finish</p></div>
-			</div>
-			<div class="eventButtons">
-				<div class="buttonCon">
-				<div class="linkB button">
-					<a href="#">See More</a>
+					<p>TRAA Presents Film DamNation @ Wolfe Performance Hall June 18 2015</p>
+					<p>Rainbox Trout Release June 22 2015</p>
+					<p>Steelhead Tagging and Monitoring Finish</p>
+					<a href="#" class="eventButtons">See More</a>
+					<a href="#" class="eventButtons">See More</a>
+					<a href="#" class="eventButtons">See More</a>
 				</div>
-				</div>
-				<div class="buttonCon">
-				<div class="linkB button">
-					<a href="#">See More</a>
-				</div>
-				</div>
-				<div class="buttonCon">
-				<div class="linkB button">
-					<a href="#">See More</a>
-				</div>
-				</div>
-			</div>
-		</div>
-
-	
-		<div class="eventBox"> 
-			<div class="eventImages">
+				<div id="evBottom">
 				<img src="images/event19.png" alt="workers and new equipment" class="eventImg">
 				<img src="images/event20.png" alt="baby fish" class="eventImg">	
-			</div>
-			<div class="eventText">
-				<div class="boxText">
-					<p>TRAA Hatchery Equipment Upgrades & Building Renovations</p></div>
-				<div class="boxText">
-					<p>Rainbow Trout Release</p></div>
-				
-			</div>
-			<div class="eventButtons">
-				<div class="buttonCon">
-				<div class="linkB button">
-					<a href="#">See More</a></div>
-				</div>
-				<div class="buttonCon">
-				<div class="linkB button">
-					<a href="#">See More</a></div>
+					<p>TRAA Hatchery Equipment Upgrades & Building Renovations</p>
+					<p>Rainbow Trout Release</p>
+					<a href="#" class="eventButtons">See More</a>
+					<a href="#" class="eventButtons">See More</a>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
 
 
 	
 
 	<div class="divider"></div>
-
-		<div class="divider"></div>
 
 		<div class="extraSpace">
 		<div id="memberships">
@@ -302,8 +142,6 @@
 				<div class="fundraiserImg"><img src="images/fund1.png" alt="Trout Hatchery"></div>
 				<div class="fundraiserImg"><img src="images/fund2.png" alt="Salmonid Monitoring"></div>
 				<div class="fundraiserImg"><img src="images/fund3.png" alt="Komoka Hydrological"></div>
-			</div>
-			<div id="fundraiserTitles">
 				<div class="fundraiserTitle"><p>Improvements to the TRAA Trout Hatchery</p></div>
 				<div class="fundraiserTitle"><p>Continuation of the Salmonid Monitoring Program</p></div>
 				<div class="fundraiserTitle"><p>Funding the Komoka Creek Hydrological Study</p></div>
