--- a/contact.html
+++ b/contact.html
@@ -54,26 +54,10 @@
 		</div>
 	</div>
 </div> 
+
 	<div class="divider"></div>
 		
-<div class="extraSpace">
-	<div id="cont2">
-		<div id="cont2TextCon">
-			<p>Come and talk to us at a TRAA General Meeting Guests are welcome!
-			<p>The TRAA meets every second Wednesday of each month. We always try to get the meetings started by 7:00pm so try to be there a few minutes beforehand.</p>
-			<p>The venue is the Western Ontario Fish & Game Protective Association's clubhouse located just east of the Dearness Home on Southdale Road (East), on the North side of Southdale Road.</p> 
-			<p>The address is 790 Southdale Road East, London, Ontario.</p>
-			<p>Note: Every now and then we have "off-site" meetings. For example, the July and August meetings are "fishing meetings" so we won't be at WOFGPA clubhouse. Stay on top of these changes by visiting this Web site often.</p>
-			<p>TRAA SnailMail Send all those cards and letters (and cheques!) to:
-				Thames River Anglers Association
-				2202 Coronation Drive
-				London, Ontario
-				N6G 0B9 
-			</p>
-			<div class="buttonCon">
-					<div class="linkB button"><a href="https://www.facebook.com/groups/4TRAA/">TRAA Facebook Page</a></div>
-			</div>
-		</div>	
+	<div class="extraSpace">	
 		<div id="contactForm">
 			<form>
 				<label for="fname">First Name</label>
@@ -94,6 +78,29 @@
 				<input type="submit" name="submit">
 			</form>	
 		</div>
+	</div>
+
+	<div class="divider"></div>
+		
+<div class="extraSpace">
+	<div id="cont2">
+		<div id="cont2TextCon">
+			<p>Come and talk to us at a TRAA General Meeting Guests are welcome!
+			<p>The TRAA meets every second Wednesday of each month. We always try to get the meetings started by 7:00pm so try to be there a few minutes beforehand.</p>
+			<p>The venue is the Western Ontario Fish & Game Protective Association's clubhouse located just east of the Dearness Home on Southdale Road (East), on the North side of Southdale Road.</p> 
+			<p>The address is 790 Southdale Road East, London, Ontario.</p>
+			<p>Note: Every now and then we have "off-site" meetings. For example, the July and August meetings are "fishing meetings" so we won't be at WOFGPA clubhouse. Stay on top of these changes by visiting this Web site often.</p>
+			<p>TRAA SnailMail Send all those cards and letters (and cheques!) to:
+				Thames River Anglers Association
+				2202 Coronation Drive
+				London, Ontario
+				N6G 0B9 
+			</p>
+			<div class="buttonCon">
+					<div class="linkB button"><a href="https://www.facebook.com/groups/4TRAA/">TRAA Facebook Page</a></div>
+			</div>
+		</div>	
+	
 	</div>
 </div>
 
@@ -131,8 +138,6 @@
 				<div class="fundraiserImg"><img src="images/fund1.png" alt="Trout Hatchery"></div>
 				<div class="fundraiserImg"><img src="images/fund2.png" alt="Salmonid Monitoring"></div>
 				<div class="fundraiserImg"><img src="images/fund3.png" alt="Komoka Hydrological"></div>
-			</div>
-			<div id="fundraiserTitles">
 				<div class="fundraiserTitle"><p>Improvements to the TRAA Trout Hatchery</p></div>
 				<div class="fundraiserTitle"><p>Continuation of the Salmonid Monitoring Program</p></div>
 				<div class="fundraiserTitle"><p>Funding the Komoka Creek Hydrological Study</p></div>
